# yt-dlp-vixsrc

./: README.md  pyproject.toml
yt_dlp_plugins/extractor/: vixsrc.py
